<resources>
    <!-- GLOBAL -->
    <string name="app_name">CodeSprint</string>

    <!-- LOGIN / SIGNUP -->
    <string name="prompt_username">Username</string>
    <string name="prompt_password">Password</string>
    <string name="action_sign_in">Sign in</string>
    <string name="app_description">CodeSprint is a platform that allows users to exercise their mind with simple coding-based challenges made to be done fast.</string>
    <string name="signed_in_notification">Signed in successfully</string>
    <string name="sign_up_button_text">Sign Up</string>
    <string name="form_error">Please enter a&#160;</string>
    <string name="form_error_const">Please enter an&#160;</string>
    <string name="signin_error_generic">There was a problem signing you in…</string>
    <string name="signin_error_no_user">Email does not exist (in our system)</string>
    <string name="signin_error_bad_password">Username or password incorrect</string>

    <!-- HOME -->
    <string name="title_activity_home">Home</string>
    <string name="users_you_follow_option">Users you follow</string>
    <string name="logout_option">Logout</string>
    <string name="add_user_option">Add user</string>
    <string name="time_label">Time:</string>
    <string name="grade_label">Grade:</string>
    <string name="current_challenge_button_label">Do today\'s challenge</string>
    <string name="right_arrow">Right arrow</string>

    <!-- VIEW USERCHALLENGE -->
    <string name="your_results_title">Your Results</string>
    <string name="users_you_re_following_title">Users you\'re following</string>

    <!-- BEGIN CHALLENGE -->
    <string name="title_activity_begin_challenge">BeginChallengeActivity</string>
    <string name="todays_challenge">Today\'s Challenge</string>
    <string name="title_activity_view_user_challenge">ViewUserChallengeActivity</string>
    <string name="are_you_ready_to_begin_title">Are you ready to begin?</string>
    <string name="begin_button_text">Let\'s begin!</string>
    <string name="challenge_instructions_text">You will be asked a number of coding questions that you should answer as quickly as possible.\nThe questions asked may be in any programming language or even pseudocode, however they do not require in-depth knowledge of the languages.\n\nOnce the challenges finish downloading, you may click the \"I\'m Ready\" button to proceed to the questions.</string>
    <string name="downloading_challenges_notification">Downloading today\'s challenges</string>
    <string name="finished_downloading_notification">Challenges finished downloading</string>

    <!-- CHALLENGE -->
    <string name="title_activity_challenge">ChallengeActivity</string>
    <string name="your_answer_hint">Your answer</string>
    <string name="submit_button_text">Submit</string>
    <string name="answer_incorrect_notification">Answer incorrect, try again</string>
    <string name="answer_correct_notification">Correct!</string>
    <string name="question_count">Question&#160;</string>

    <!-- RESULTS -->
    <string name="title_activity_results">ResultsActivity</string>
    <string name="results_title">Your Results</string>
    <string name="total_time_title">Total Time</string>
    <string name="results_bar_title">Results</string>
    <string name="done_button_text">Done</string>
    <string name="question_one_label">Question 1:</string>
    <string name="question_two_label">Question 2:</string>
    <string name="question_three_label">Question 3:</string>

    <!-- FOLLOWING -->
    <string name="title_activity_following">FollowingActivity</string>
    <string name="following_title">Users you follow</string>
    <string name="unfollow_label">Unfollow</string>
    <string name="unfollowed_notification_text">Unfollowed&#160;</string>
    <string name="yes">Yes</string>
    <string name="no">No</string>
    <string name="question_mark">\?</string>
    <string name="unfollow_conf_dialogue">Are you sure you want to unfollow&#160;</string>

    <!-- FOLLOW USER -->
    <string name="follow_user_title">Follow a User</string>
    <string name="follow_user_submit">Submit</string>
    <string name="follow_user_cancel">Cancel</string>

    <!-- ADD USER -->
    <string name="title_activity_add_user">AddUserActivity</string>
    <string name="account_created_notification">Account created, please login to continue</string>
    <string name="sign_up_title">Sign Up</string>
    <string name="signup_error_generic">There was a problem signing you up…</string>
    <string name="signup_error_email_collision">This email is already in use</string>
    <string name="signup_error_simple_password">This password is not complex enough, please use 6 or more characters</string>
    <string name="signup_description">Sign up to CodeSprint below with a username email and password. Password must contain 6 or more characters.</string>
    <string name="prompt_email">Email</string>
    <string name="error_occured_general">An error occurred, please try again later</string>
    <string name="no_user_found_error">No user by that name found</string>
    <string name="followed_text">Following&#160;</string>
    <string name="already_following_error">You already follow&#160;</string>
    <string name="following_yourself_meme">You can\'t follow yourself…</string>
    <string name="error_occurred_super_general">An error occurred</string>
    <string name="dont_have_account">Don\'t have an account yet?</string>

    <!-- MISC -->
    <string name="load_data_error">There was an error loading data…</string>
    <string name="loading">Loading…</string>
</resources>
