<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    tools:context="com.mad.exercise6.HomeActivity">
    <item
        android:id="@+id/action_users"
        android:orderInCategory="100"
        android:title="@string/users_you_follow_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_quit"
        android:orderInCategory="100"
        android:title="@string/logout_option"
        app:showAsAction="never" />
    <item
        android:id="@+id/action_add_user"
        android:icon="@android:drawable/ic_menu_add"
        android:orderInCategory="100"
        android:title="@string/add_user_option"
        app:showAsAction="ifRoom" />
</menu>