<?xml version="1.0" encoding="utf-8"?>

<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.sudo_code.codesprint.activity.UserChallengeActivity"
    android:id="@+id/user_challenge_sroll_view">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:textAlignment="center"
            android:layout_marginTop="20dp"
            android:layout_marginBottom="20dp"
            android:text="@string/your_results_title"
            android:textStyle="bold"
            android:textSize="25sp" />


        <TableLayout
            android:layout_width="match_parent"
            android:layout_height="60dp">

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textStyle="bold"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="20sp"
                    android:gravity="end"
                    android:text="@string/time_label" />

                <TextView
                    android:id="@+id/activity_user_time"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_weight="1"
                    android:textSize="20sp"
                    android:text="34.33" />

            </TableRow>

            <TableRow
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="5dp">

                <TextView
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:textStyle="bold"
                    android:layout_weight="1"
                    android:layout_marginRight="5dp"
                    android:layout_marginEnd="5dp"
                    android:textSize="20sp"
                    android:gravity="end"
                    android:text="@string/grade_label" />

                <TextView
                    android:id="@+id/activity_user_grade"
                    android:layout_width="match_parent"
                    android:layout_weight="1"
                    android:layout_height="wrap_content"
                    android:textSize="20sp"
                    android:text="B" />

            </TableRow>

        </TableLayout>

        <TextView
            android:id="@+id/textView2"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_gravity="center"
            android:layout_marginBottom="20dp"
            android:layout_marginTop="50dp"
            android:text="@string/users_you_re_following_title"
            android:textAlignment="center"
            android:textSize="25sp"
            android:textStyle="bold" />

        <android.support.v7.widget.RecyclerView
            android:id="@+id/user_challenge_recycler"
            android:layout_width="match_parent"
            android:layout_height="match_parent" />

    </LinearLayout>

</ScrollView>
